--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 ################ dataSource START #################
 #primary
-spring.primary.datasource.url=jdbc:mysql://localhost:3306/tlong
+spring.primary.datasource.url=jdbc:mysql://47.96.66.66:3306/tlong?useUnicode=true&characterEncoding=utf8
 spring.primary.datasource.username=root
 spring.primary.datasource.password=mypassword
 spring.primary.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #secondary
-spring.secondary.datasource.url=jdbc:mysql://localhost:3306/test
+spring.secondary.datasource.url=jdbc:mysql://47.96.66.66:3306/longshi?useUnicode=true&characterEncoding=utf8
 spring.secondary.datasource.username=root
 spring.secondary.datasource.password=mypassword
 spring.secondary.datasource.driver-class-name=com.mysql.jdbc.Driver
