--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ################ dataSource START #################
 #primary
-spring.primary.datasource.url=jdbc:mysql://47.96.66.66:3306/tlong?useUnicode=true&characterEncoding=utf8
+spring.primary.datasource.url=jdbc:mysql://47.96.66.66:3306/tlongdb?useUnicode=true&characterEncoding=utf8
 spring.primary.datasource.username=root
 spring.primary.datasource.password=mypassword
 spring.primary.datasource.driver-class-name=com.mysql.jdbc.Driver
